--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -1,3 +1,11 @@
 @forward "header";
 @forward "alert";
+@forward "advertising";
+@forward "protect";
+@forward "yoga";
+@forward "start";
+@forward "members";
+@forward "question";
+@forward "award";
+@forward "platform";
 @forward "footer";
