--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,33 @@
 @use "../globals/colors" as *;
 @use "../globals/mixin" as *;
 header {
+  background-color:$bg-color;
+  transition: all .6s ease-in-out;
+  animation: navbar 0.6s;
+}
+header.sticky {
+  transition: .6s;
   background-color: $bg-color;
   position:sticky;
-  top: 0;
+  top: 0px;
   z-index: 99;
+  animation: nav 0.6s forwards;
+}
+@keyframes nav {
+  0% {
+    transform: translateY(-100%)
+  }
+  100% {
+    transform: translateY(0)
+  }
+}
+@keyframes close-nav {
+  0% {
+    transform: translateY(0%)
+  }
+  100% {
+    transform: translateY(-100%)
+  }
 }
 .head {
   @include adjust;
@@ -23,6 +46,7 @@ header {
       text-align: center;
       text-transform: uppercase;
       font-size: .9rem;
+      letter-spacing: .9px;
       color:$text-color;
       transition: .2s;
       color: #fff;
@@ -43,6 +67,7 @@ header {
       cursor: pointer;
       color: #fff;
       font-size: .9rem;
+      letter-spacing: .9px;
       text-transform:uppercase;
       align-items: center;
       padding: 21px 31px;
@@ -52,11 +77,22 @@ header {
       }
     }
     &_start-btn {
+      letter-spacing: .9px;
       @include btn;
     }
   }
   #check-bar {
     display: none
+  }
+  .close-bar {
+    display: none;
+    position:absolute;
+    background-color:rgba(0,0,0, .6);
+    height:87vh;
+    top: 13vh;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
   .bar {
     display: none;
@@ -65,16 +101,20 @@ header {
        color:#fff;
     }
   }
+  .x-bar {
+    display: none;
+  }
   @media (max-width:1024px) {
     &__list {
-      transform: translateY(-120%);
-      transition: .2s;
+      z-index: 98;
+      transform: translateX(-120%);
+      transition:all .2s;
       position: fixed;
       flex-direction: column;
       justify-content:space-around;
       top:13vh;
-      right: 0;
-      width: 100vw;
+      left: 0;
+      width: 75vw;
       height: 87vh;
       background-color: #000;
       padding-bottom: 40px;
@@ -86,14 +126,40 @@ header {
     }
     .bar {
       display: block;
+      transition: .3s;
+    }
+    .close-bar {
+      display: block;
+      z-index: 97;
+      transform: translateX(-100%);
+    }
+    .x-bar {
+      display: block;
+      position:absolute;
+      top: 15px;
+      right: 15px;
     }
     &__register {
       display: none;
     }
 
     #check-bar:checked ~ .head__list {
-      transform: translateY(0);
+      transform: translateX(0);
+    }
+    #check-bar:checked ~ .close-bar {
+      transform: translateX(0);
+    }
+    #check-bar:checked ~ .bar {
+      transform: rotate(90deg);
     }
   }
-
+  @media (max-width:380px) {
+    &__list {
+      justify-content:space-evenly;
+     .head__register {
+      display: flex;
+       flex-direction: column;
+     }
+    }
+ }
 }
